fix uart0 and Replace sbi when generating fip.bin

--- a/fip/Makefile
+++ b/fip/Makefile
@@ -112,8 +112,8 @@ fsbl%: export CHIP_ARCH=CV180X
 fsbl%: export CVIARCH=CV180X
 fsbl%: export BOOT_CPU=riscv
 fsbl%: export BLCP_2ND_PATH=${TOP_DIR}/freertos/cvirtos.bin
-#fsbl%: export LOADER_2ND_PATH=${TOP_DIR}/os.bin
-fsbl%: export LOADER_2ND_PATH=${TOP_DIR}/u-boot/build/u-boot-raw.bin
+fsbl%: export LOADER_2ND_PATH=${TOP_DIR}/os.bin
+#fsbl%: export LOADER_2ND_PATH=${TOP_DIR}/u-boot/build/u-boot-raw.bin
 fsbl%: export RTOS_DUMP_PRINT_ENABLE=y
 fsbl%: export RTOS_DUMP_PRINT_SZ_IDX=17
 fsbl%: export RTOS_FAST_IMAGE_TYPE=0
